# due-diligence-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: methodology.md  rubric.md
docs/examples/argo-cd/: report.md
docs/examples/kind/: report.md
docs/examples/otel-collector/: report.md
output/: Readme.md  graph.json  report.md  scorecard.json  summary.json
src/dda/: cli.py  pipeline.py
src/dda/extractors/: _common.py  ci.py  docs.py  infra.py  observability.py  performance_smells.py  security_deps.py  structure.py
src/dda/ingest/: clone.py  index.py
src/dda/report/: render.py
src/dda/scoring/: rubric.py  score.py
src/dda/utils/: config.py  hashing.py  text.py
src/dda/verifier/: evidence_gate.py
src/due_diligence_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: config.yaml  evidence.schema.json  report.md.tmpl  scorecard.schema.json
tests/: test_evidence_gate.py  test_report_renders.py  test_rubric_scoring.py
tests/fixtures/tiny_repo/: README.md  go.mod
